# coq-hol-light

./: .gitignore  AUTHORS.md  CHANGES.md  CONFIG  Makefile  README.md  RELEASE.md  With_N.lp  With_N.v  axioms.v  coq-hol-light.opam  coq.v  coq_hol_light.ml  create-lib.sh  hol_light.v  hol_upto_arith_axioms.v  hol_upto_arith_opam.v  hol_upto_arith_terms.v  hol_upto_arith_types.v  mappings.lp  mappings.v  reproduce  reproduce.sh  terms.v  theorems.v  theory_hol.v  types.v
.github/workflows/: main.yml
